# merkledrop-rns-contract

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
programs/airdrop/src/: lib.rs
programs/airdrop0/: Cargo.toml
programs/airdrop0/src/: lib.rs
src/: lib.rs
tests/: airdrop.ts
